proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/func_bad_multiline_bool.py
def f(x, y):
    if x == 5 and
        y == 6:
        print 'wow really?'

f(5, 6)
